# bach

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  metric_table.csv  multi_ins.ipynb  pyproject.toml  test.ipynb
.github/workflows/: main.yml
bach/: __init__.py  __main__.py  data.py  dataset.py  inference.py  metric_table.py  model.py  test.ipynb  train.py  upload.py
bach/train/: __init__.py  train_rnn.py  train_transformer.py
